--- a/backend/backend/credentials.py.template
+++ b/backend/backend/credentials.py.template
@@ -1,7 +1,12 @@
-# Copy your credentials here and rename this file to credentials.py
+"""
+This module contains security critical credentials.
+SECURITY WARNING: keep the secret key used in production secret!
+"""
+
+#  Copy your credentials here and rename this file to credentials.py
 # Make sure that you do not add your `credentials.py` to Git
 
-# SECURITY WARNING: keep the secret key used in production secret!
+# Secret key for Django
 SECRET_KEY = 'copy_your_secret_key_here'
 
 # MySQL credentials
