--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ markdown==2.4.1
 django-filter==1.0.1
 MySQL-python==1.2.5
 django-crispy-forms==1.6.1
+django-allauth==0.34.0
+django-rest-auth==0.9.2
