--- a/focus/credentials.py.template
+++ b/focus/credentials.py.template
@@ -14,3 +14,10 @@ MYSQL_USER = 'username'
 MYSQL_PASSWORD = 'password'
 MYSQL_HOST = '127.0.0.1'
 MYSQL_PORT = '3306'
+
+# SMTP server credentials
+EMAIL_USE_TLS = True
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_HOST_USER = 'my_email@gmail.com'
+EMAIL_HOST_PASSWORD = 'my_password'
