Update Django, DRF and migrate to Python3

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Django==1.11.29
-djangorestframework==3.9.1
-markdown==2.4.1
-django-filter==1.0.1
-MySQL-python==1.2.5
-django-crispy-forms==1.6.1
-django-allauth==0.34.0
-django-rest-auth==0.9.2
-django-rest-swagger==2.1.2
+Django==3.0.8
+django-allauth==0.42.0
+django-crispy-forms==1.9.2
+django-filter==2.3.0
+django-rest-auth==0.9.5
+django-rest-swagger==2.2.0
+djangorestframework==3.11.0
+Markdown==3.2.2
+mysqlclient==2.0.1
